traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:29: error: ')' expected but 'else' found.
    } else {
      ^