traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt:Int = 0
  var descend:Boolean = true
  var tourne:Boolean = false
  
  while(!positionFinale()){
    avancer()
  }
  
  def positionFinale():Boolean = {
    if(getX() == getMondeLargeur() - 1 && getY() == getMondeHauteur() - 1) {
    	message()
    	return true
    } else return false
  }
  
  def avancer() {
    var hauteur:Int = getMondeHauteur()
    var x:Int = getX()
    var y:Int = getY()
    message()
    if((((y == 0  && x != 0) || y == hauteur - 1) && tourne == false) {
      setPos(x + 1, y)
      message()
      if(y == 0)
      	descend == true
      else if(y == hauteur - 1)
      	descend == false
      tourne = true
    } else {
      tourne = false
      if(descend)
      	setPos(x, y + 1)
      else
      	setPos(x, y - 1)
    }
  }
  
  def message() {
    cpt += 1
    ecritMessage(cpt)
  }
       
      /* if(y == 0) {
      	descend == true
      	setPos(x + 1, y + 1)
      } else */
}